# DeepJudgeStreamingJsonBenchmark

./: .actrc  .gitignore  .snyk  ARHICTECTURE.md  README.md  Taskfile.yml  main.py  parser_loader.py  pyproject.toml  pytest.ini  qodana.yaml  requirements.txt  tree-venv.txt  tree.txt
.github/: run-ci.ps1
.github/workflows/: bandit.yml  ci-docs.yml  ci.yml  codeql.yml  docs-ai.yml  docs-lmdocs.yml  docs-project-guide.yml  llmdocgen-docs.yml  ossf-slsa3-publish.yml  pylint.yml  qodana_code_quality.yml  semgrep.yml  stale.yml
.trunk/: .gitignore  trunk.yaml
docs/: CHALLENGE.md
docs/get-started/: README.md
docs/prompts/: 001-overview.md  002-solid.md  003-anyio.md  004-refactor.md
docs/serializers/: bson_parser.md  cbor_parser.md  flatbuffers_parser.md  index.md  msgpack_parser.md  orjson_parser.md  parquet_parser.md  pickle_parser.md  protobuf_parser.md  ultrajson_parser.md
docs/serializers/anyio/: bson_parser.md  cbor_parser.md  flatbuffers_parser.md  msgpack_parser.md  orjson_parser.md  parquet_parser.md  pickle_parser.md  protobuf_parser.md  ultrajson_parser.md
docs/serializers/raw/: bson_parser.md  cbor_parser.md  flatbuffers_parser.md  msgpack_parser.md  parquet_parser.md  pickle_parser.md  protobuf_parser.md  ultrajson_parser.md
docs/serializers/solid/: bson_parser.md  cbor_parser.md  flatbuffers_parser.md  msgpack_parser.md  parquet_parser.md  pickle_parser.md  protobuf_parser.md  ultrajson_parser.md
features/: streaming_parser.feature
features/steps/: test_parser_steps.py
src/serializers/: __init__.py  bson_parser.py  cbor_parser.py  flatbuffers_parser.py  json_parser.py  marshall_parser.py  msgpack_parser.py  parquet_parser.py  pickle_binary_mono_parser.py  pickle_binary_multi_parser.py  protobuf_parser.py  reactivex_parser.py  ultrajson_parser.py
src/serializers/anyio/: __init__.py  bson_parser.py  cbor_parser.py  flatbuffers_parser.py  msgpack_parser.py  orjson_parser.py  parquet_parser.py  pickle_parser.py  protobuf_parser.py  ultrajson_parser.py
src/serializers/asyncio/: __init__.py  bson_parser.py  cbor_parser.py  flatbuffers_parser.py  msgpack_parser.py  parquet_parser.py  pickle_parser.py  protobuf_parser.py  ultrajson_parser.py
src/serializers/raw/: bson_parser.py  cbor_parser.py  flatbuffers_parser.py  msgpack_parser.py  parquet_parser.py  pickle_parser.py  protobuf_parser.py  ultrajson_parser.py
src/serializers/reactivex/: bson_parser.py  cbor_parser.py  flatbuffers_parser.py
src/serializers/solid/: bson_parser.py  cbor_parser.py  flatbuffers_parser.py  msgpack_parser.py  parquet_parser.py  pickle_parser.py  protobuf_parser.py  ultrajson_parser.py
src/serializers/trio/: README.md  ultrajson_parser.py
src/simulation/: algo_metadata.py  benchmark_runner.py  data_gen.py  diagram_generator.py  docs_generator.py  file_discovery.py  functional_metrics.py  generate_markdown_docs.py  markdown_generator.py  metrics_definitions.py  net_sim.py  non_functional_metrics.py  parser_loader.py  report_generator.py  utils.py
tests/: test_data_gen.py  test_msgpack_requirements.py  test_parquet_parser.py  test_parser_compilation.py  test_parser_functionality.py  test_parsers.py  test_reactive_parsers.py  test_syntax_validation.py  test_working_parsers.py
tests/scripts/: check_all_parsers.py  docs_generator.py  generate_markdown_docs.py  validate_syntax.py
tests/serializers/anyio/: test_reactive_parsers.py
tests/simulation/: test_data_gen.py
